--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Times New Roman', 'sans-serif';
-    background-color: #000000;
+    background: #000000;
     color: #FFFFFF;
 }
 
